# gway

./: .gitattributes  .gitignore  AGENTS.md  BUILD  CHANGELOG.rst  LICENSE.md  MANIFEST.in  README.rst  TESTING.rst  bandit-baseline.json  gway.bat  gway.sh  install.bat  install.sh  package.json  pyproject.toml  requirements.txt  tasks.json  unicode.txt  upgrade.bat  upgrade.sh  windows_service.py
data/: POLICY.txt  conway.txt  help.sqlite
gway/: __init__.py  __main__.py  _env_bindings.py  _env_support.py  argparser.py  builtins.py  cli.py  command.py  console.py  core.py  decorators.py  environs.py  envs.py  functions.py  gateway.py  logging.py  main.py  runner.py  sigils.py  sources.py  structs.py  units.py  watchers.py
projects/: __init__.py  _tests.py  admin.py  admin_dashboard.py  approval.py  audio.py  auth_db.py  authdb.py  auto_upgrade.py  awg.py  b64.py  box.py  cast.py  cdv.py  cli.py  clip.py  clipboard.py  clock.py  conway.py  database.py  deck.py  django.py  dummy.py  env.py  etron.py  evennia.py  forms.py  game.py  gif.py  gist.py  gui.py  help_db.py  hub.py  job.py  lcd.py  logs.py  mail.py  mod.py  model.py  mtg.py  (+31 more)
recipes/: README.rst  arthexis_com.gwr  auto_releaser.gwr  auto_upgrade.gwr  begin-reading.gwr  cookbook.gwr  crud_site.gwr  dev-website.gwr  devsite.gwr  etron.gwr  etron_auth.gwr  gamebox.gwr  kiosk.gwr  media_blog.gwr  micro_blog.gwr  midblog.gwr  ocpp_csms.gwr  ocpp_simulator.gwr  odoo_split_ws_tags.gwr  rfid_lcd_loop.gwr  rfid_trigger.gwr  skeleton.gwr  speech-cog.gwr  speech-recognition.gwr  static_site.gwr  transcriptor.gwr  (+1 more)
(+376 files in other folders)
