[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "gway"
version = "0.0.1"
description = "Infrastructure for https://www.gelectriic.com"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
dependencies = []
[[project.authors]]
name = "arthexis"
email = "arthexis@gmail.com"

["project.scripts"]
gway = "gway:gway"
